<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <ImageView
        android:id="@+id/logo_tittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/tittle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/logo_title" />

    <ImageView
        android:id="@+id/iv_title_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/player"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_tittle"
        android:contentDescription="@string/tittle_player" />

    <ImageView
        android:id="@+id/iv_vs"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:src="@drawable/vs"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_tittle"
        android:contentDescription="@string/iv_vs" />


    <ImageView
        android:id="@+id/iv_info"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_vs"
        android:contentDescription="@string/iv_info" />

    <ImageView
        android:id="@+id/iv_title_com"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/com"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_tittle"
        android:contentDescription="@string/iv_title_computer" />

    <ImageView
        android:id="@+id/iv_reset"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:src="@drawable/refresh"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_score"
        android:contentDescription="@string/iv_reset" />


    <!--    player-->

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/_16sdp"
        android:text="@string/score_human_0_computer_0"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_info" />

    <LinearLayout
        android:id="@+id/ll_rock_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_title_player">

        <ImageView
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:src="@drawable/rock"
            android:contentDescription="@string/iv_rock" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_scissors_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_rock_player">


        <ImageView
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:src="@drawable/scissors"
            android:contentDescription="@string/iv_scissors" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_paper_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_scissors_player">

        <ImageView
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:src="@drawable/paper"
            android:contentDescription="@string/iv_paper" />
    </LinearLayout>

    <!--    com-->


    <ImageView
        android:id="@+id/iv_com_choice"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_80sdp"
        android:layout_marginTop="@dimen/_78sdp"
        android:orientation="vertical"
        app:layout_constraintLeft_toRightOf="@+id/tv_score"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_title_com"
        android:contentDescription="@string/iv_com_choice" />


</androidx.constraintlayout.widget.ConstraintLayout>